# smartdrive

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  genesis_block.json  pyproject.toml
scripts/: install-hooks.sh
scripts/git-hooks/: pre-commit.sh
smartdrive/: __init__.py  check_file.py  config.py  logging_config.py  sign.py  utils.py  version.py
smartdrive/cli/: __main__.py  api.py  errors.py  handlers.py  spinner.py  utils.py
smartdrive/cli/scripts/: async_upload_file.py
smartdrive/commune/: commune_client_manager.py  commune_connection_pool.py  connection_pool.py  errors.py  models.py  request.py  utils.py
smartdrive/commune/module/: _protocol.py  client.py
smartdrive/miner/: config.py  miner.py  utils.py
smartdrive/miner/cert/: cert.pem  csr.pem  key.pem
smartdrive/miner/middleware/: custom_input_handler_verifier.py  miner_middleware.py
smartdrive/models/: block.py  event.py  utils.py
smartdrive/validator/: config.py  constants.py  errors.py  models.py  step.py  utils.py  validation.py  validator.py
smartdrive/validator/api/: api.py  database_api.py  endpoints.py  exceptions.py  remove_api.py  retrieve_api.py  store_api.py  utils.py  validate_api.py
smartdrive/validator/database/: database.py
smartdrive/validator/evaluation/: evaluation.py  sigmoid.py  utils.py
smartdrive/validator/models/: block.py  models.py
smartdrive/validator/network/: network.py  utils.py
smartdrive/validator/node/: active_validator_manager.py  client.py  connection_pool.py  node.py  server.py  sync_service.py
(+43 files in other folders)
