[tool.poetry]
name = "smartdrive"
version = "0.1.0"
description = ""
authors = ["ghost-busterr", "naked-snake", "mkyts98"]
readme = "README.md"
packages = [
    { include = "smartdrive" }
]

[tool.poetry.scripts]
smartdrive = "smartdrive.cli.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
communex = "^0.1.32"
typer = "0.9.0"
tomli = "2.0.1"
py7zr = "0.21.0"
requests = "2.32.2"
python-multipart = "^0.0.9"
numpy = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
