[tool.poetry]
name = "smartdrive"
version = "0.3.7"
description = "SmartDrive subnet, a pioneering initiative designed to provide secure and distributed information storage solutions."
authors = ["ghost-busterr", "naked-snake", "mkyts98"]
readme = "README.md"
packages = [
    { include = "smartdrive" }
]

[tool.poetry.scripts]
smartdrive = "smartdrive.cli.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
communex = "0.1.34.5"
typer = "0.9.0"
tomli = "2.0.1"
requests = "2.32.2"
python-multipart = "^0.0.9"
zstandard = "0.23.0"
aiofiles="24.1.0"
pycryptodome="3.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-print = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
